cert-manager/myapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myapp
  namespace: default
spec:
  tls:
  - secretName: myapp-tls-staging
    hosts:
    - myapp.overbinary.org
  rules:
    - host: myapp.overbinary.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 3000
